--- a/meet-irl/package.json
+++ b/meet-irl/package.json
@@ -19,6 +19,7 @@
     "angular": "^1.6.6",
     "angular-mocks": "^1.6.6",
     "angular-ui-router": "^0.4.3",
+    "cors": "^2.8.4",
     "jasmine-core": "^2.8.0",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
